--- a/jentity-example/src/main/resources/application.properties
+++ b/jentity-example/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+# db
 jentity.db.driver=org.postgresql.Driver
 jentity.db.url=${DB_URL:jdbc:postgresql://localhost:5432/jentity}
 jentity.db.username=${DB_USERNAME:postgres}
 jentity.db.password=${DB_PASSWORD:postgres}
+# schema
+jentity.schema.definition=com.example.jentity.table
